# ctrlcontabil.com.br

./: .dockerignore  .gitignore  README.md  SECURITY.md
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  database.py  db_models.py  main.py  models.py  oidc.py  saml.py  sanitization.py  security.py  tenancy.py
backend/ctrl_contabil_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_global_catalog.py  0002_tenant_companies.py  0003_company_fiscal_profile.py
backend/tests/: test_tenancy.py
docker/: Dockerfile  backend.Dockerfile  docker-compose.yml  env.example
infra/nginx/: ctrlcontabil.josejunior.eng.br.conf
web/: eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/app/app/: page.tsx
web/app/app/tenants/[tenantId]/empresas/: page.tsx
web/app/auth/error/: page.tsx
web/app/dashboard/: page.tsx
web/app/privacidade/: page.tsx
web/app/suporte/: page.tsx
web/app/termos-de-uso/: page.tsx
web/hooks/: use-toast.ts
web/lib/server/: api.ts  auth.ts
